# S-ECS

./: .gitignore  CMakeLists.txt  compile_commands.json
src/: CMakeLists.txt  ComponentStore.cpp  ComponentStore.hpp  Defines.hpp  EntityManager.hpp  MyEcs.hpp
